<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:gravity="center"

    tools:context=".Payment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/payment"
            android:layout_width="277dp"
            android:layout_height="56dp"
            android:layout_margin="15dp"
            android:text="@string/payment_details"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/cardName"
            android:layout_width="294dp"
            android:layout_height="45dp"
            android:inputType="text"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:hint="@string/name_of_account_holder"
            android:text=""
            />

        <EditText
            android:id="@+id/accountNumber"
            android:layout_width="294dp"
            android:textAlignment="center"
            android:layout_height="45dp"
            android:inputType="number"
            android:layout_margin="2dp"
            android:hint="@string/enter_account_number"
            android:text=""
            />

        <EditText
            android:id="@+id/cvvNum"
            android:layout_width="294dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:hint="@string/enter_cvv_number"
            android:text=""
            />

        <Button
            android:id="@+id/pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/pay_now"
            />
    </LinearLayout>
</RelativeLayout>